[lworld] C2 compilation fails because ret_addr_offset() is not within emitted code

XMLWordPrintable

      A new assert, since move below the if C->failing() triggers when running any testing, counts do not match up in Valhalla:

      assert(!is_mcall || (call_returns[block->_pre_order] <= (uint) current_offset), "ret_addr_offset() not within emitted code");

      Disabled for now (testing passed):

      https://github.com/openjdk/valhalla/pull/286/commits/d9487db29a9b9cba209ebc256d06969548b849cf

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: