8257579: [lworld] C2 compilation fails because ret_addr_offset() is not within emitted code